# translator

./: .dockerignore  .env.example  .gitignore  CONSIDERATIONS.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
app/: logging_config.py  main.py
app/apis/: translator_api.py  translator_api_base.py
app/config/: qos_profiles.py  settings.py  subscriber_map.py  testbed_defaults.py
app/db/: connection.py  schema.py
app/impl/: sm_client.py  sm_poller.py  translator_service.py
app/middleware/: correlation_id.py
app/models/: operation.py
app/models/nef/: __init__.py  common.py  subscription.py
app/models/slice_manager/: __init__.py
app/resilience/: circuit_breaker.py  retry.py
app/store/: repositories.py  subscription_store.py
app/utils/: converters.py  idempotency.py
infra/: README.md  docker-compose.yml
mock/: sm_mock_server.py
mocks/: __init__.py
schemas/: README.md
schemas/http/: openapi.yaml
tests/: conftest.py
tests/integration/: test_create_idempotency.py  test_create_no_polling.py  test_update_patch_change_flow.py
tests/unit/: test_idempotency.py  test_repositories.py  test_sm_client_delete_idempotent.py  test_sm_client_payload_contract.py  test_translator_service_payloads.py
